BUG#13926: --order-by-primary fails if PKEY contains quote character. Quote PKEY.